# dlss-updater

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
crates/dlss-app/: Cargo.toml  app.manifest  app.rc
crates/dlss-app/src/: diagnostics.rs  main.rs  state.rs  worker.rs
crates/dlss-app/src/ui/: detail.rs  inspector.rs  library.rs  mod.rs  review.rs  table.rs  theme.rs  toolbar.rs  widgets.rs  windows.rs
crates/dlss-catalog/: Cargo.toml
crates/dlss-catalog/src/: github.rs  lib.rs
crates/dlss-core/: Cargo.toml
crates/dlss-core/src/: game_risk.rs  imports.rs  lib.rs  model.rs  tools.rs  traits.rs  workflow.rs
crates/dlss-platform/: Cargo.toml
crates/dlss-platform/src/: discovery.rs  lib.rs  portable.rs  windows.rs
scripts/: package-windows.sh
