[package]
name = "dlss-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dlss-updater"
path = "src/main.rs"

[dependencies]
crossbeam-channel.workspace = true
dlss-catalog = { version = "0.1.0", path = "../dlss-catalog" }
dlss-core = { version = "0.1.0", path = "../dlss-core" }
dlss-platform = { version = "0.1.0", path = "../dlss-platform" }
eframe.workspace = true
egui_extras.workspace = true
jiff.workspace = true
rfd = "0.16"
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
embed-resource = "3.0.11"
