[package]
name = "dlss-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dlss-core = { version = "0.1.0", path = "../dlss-core" }
jiff.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
# reqwest's `rustls-no-provider` feature deliberately selects no crypto backend;
# this direct dependency exposes ring, which `GithubCatalogClient` installs once.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
