[package]
name = "dlss-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atomic-write-file = "0.3.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
