[package]
name = "dlss-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dlss-core = { version = "0.1.0", path = "../dlss-core" }
object.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[target."cfg(windows)".dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security_WinTrust", "Win32_Security_Cryptography", "Win32_UI_Shell", "Win32_System_Registry", "Win32_System_Com", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
windows-registry = "0.6"
